Fix deprecated warnings